canadensis_dsdl_frontend/tests/compile_fail/duplicate_fields_response/canadensis/DuplicateFieldsInResponse.1.0.uavcan

@sealed
---
# Duplicate fields in this response

int64 a
int8 a

@sealed
